--- a/package.json
+++ b/package.json
@@ -2,9 +2,18 @@
   "name": "hardhat-project",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "hardhat": "^2.22.19"
+    "@types/chai": "^4.3.11",
+    "@types/mocha": "^10.0.6",
+    "chai": "^4.3.10",
+    "hardhat": "^2.22.19",
+    "mocha": "^10.2.0"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^5.2.0",
+    "axios": "^1.8.4",
     "dotenv": "^16.4.7"
+  },
+  "scripts": {
+    "test": "hardhat test"
   }
 }
