--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^2.2.4",
+    "@types/styled-components": "^5.1.34",
+    "ethers": "^6.13.5",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "styled-components": "^6.1.17",
     "viem": "^2.28.0",
     "wagmi": "^2.15.0"
   },
